Bug 235345 - KWord crashes when closing
Summary: KWord crashes when closing
Status: RESOLVED FIXED
Alias: None
Product: koffice
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
: 235476 235514 235943 236108 236857 237035 237706 238565 240357 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-25 14:21 UTC by Unknown
Modified: 2010-06-01 17:12 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.27 KB, text/plain)
2010-04-30 04:56 UTC, Paul Jenkins
Details
New crash information added by DrKonqi (2.95 KB, text/plain)
2010-05-14 15:32 UTC, Lionel POIBLANC
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2010-04-25 14:21:48 UTC
Application: kword (2.2 RC 1)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-21-generic x86_64
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
I closed KWord and it crashed causing DrKonqi to show up

 -- Backtrace:
Application: KWord (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f38510bc760 (LWP 7609))]

Thread 2 (Thread 0x7f3831d50710 (LWP 7612)):
#0  0x00007f384aa7494a in g_main_context_check () from /lib/libglib-2.0.so.0
#1  0x00007f384aa754c3 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f384aa758fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f384f6b7566 in QEventDispatcherGlib::processEvents (this=0x25866e0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00007f384f68c992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007f384f68cd6c in QEventLoop::exec (this=0x7f3831d4fdb0, flags=) at kernel/qeventloop.cpp:201
#6  0x00007f384f596d59 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007f384f66d178 in QInotifyFileSystemWatcherEngine::run (this=0x25659e0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f384f599775 in QThreadPrivate::start (arg=0x25659e0) at thread/qthread_unix.cpp:248
#9  0x00007f384f3099ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007f384e0bc69d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f38510bc760 (LWP 7609)):
[KCrash Handler]
#5  QWidgetBackingStore::resetWidget (this=0x223ccd0, __in_chrg=<value optimized out>) at painting/qbackingstore_p.h:244
#6  ~QWidgetBackingStore (this=0x223ccd0, __in_chrg=<value optimized out>) at painting/qbackingstore.cpp:846
#7  0x00007f384e88725d in ~QWidget (this=0x2211b40, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1449
#8  0x00007f384fcafd75 in ~KMainWindow (this=0x2211b40, __in_chrg=<value optimized out>) at ../../kdeui/widgets/kmainwindow.cpp:476
#9  0x00007f3844431177 in ~KoMainWindow (this=0x2211b40, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at ../../../libs/main/KoMainWindow.cpp:416
#10 0x00007f384f69dd6d in QObject::event (this=0x2211b40, e=0x52a3c10) at kernel/qobject.cpp:1231
#11 0x00007f384e87fbdf in QWidget::event (this=0x2211b40, event=0x52a3c10) at kernel/qwidget.cpp:8455
#12 0x00007f384ec42cab in QMainWindow::event (this=0x2211b40, event=0x52a3c10) at widgets/qmainwindow.cpp:1433
#13 0x00007f384fcec6f3 in KXmlGuiWindow::event (this=0x7fff2cefd8a0, ev=0x1) at ../../kdeui/xmlgui/kxmlguiwindow.cpp:131
#14 0x00007f384e82a22c in QApplicationPrivate::notify_helper (this=0x1fe9c80, receiver=0x2211b40, e=0x52a3c10) at kernel/qapplication.cpp:4300
#15 0x00007f384e8306fb in QApplication::notify (this=0x7fff2cefe700, receiver=0x2211b40, e=0x52a3c10) at kernel/qapplication.cpp:4183
#16 0x00007f384fbd5526 in KApplication::notify (this=0x7fff2cefe700, receiver=0x2211b40, event=0x52a3c10) at ../../kdeui/kernel/kapplication.cpp:302
#17 0x00007f384f68e06c in QCoreApplication::notifyInternal (this=0x7fff2cefe700, receiver=0x2211b40, event=0x52a3c10) at kernel/qcoreapplication.cpp:704
#18 0x00007f384f6907e7 in QCoreApplication::sendEvent (receiver=0x0, event_type=<value optimized out>, data=0x1f46c30) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#19 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=<value optimized out>, data=0x1f46c30) at kernel/qcoreapplication.cpp:1345
#20 0x00007f384f6b79d3 in QCoreApplication::sendPostedEvents (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#21 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:276
#22 0x00007f384aa718c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#23 0x00007f384aa75748 in ?? () from /lib/libglib-2.0.so.0
#24 0x00007f384aa758fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#25 0x00007f384f6b7513 in QEventDispatcherGlib::processEvents (this=0x1f48140, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#26 0x00007f384e8da46e in QGuiEventDispatcherGlib::processEvents (this=0x7fff2cefd8a0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#27 0x00007f384f68c992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#28 0x00007f384f68cd6c in QEventLoop::exec (this=0x7fff2cefe6b0, flags=) at kernel/qeventloop.cpp:201
#29 0x00007f384f690aab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#30 0x00007f38446fa08d in kdemain (argc=<value optimized out>, argv=<value optimized out>) at ../../../kword/part/main.cpp:38
#31 0x00000000004070f3 in launch (argc=1, _name=<value optimized out>, args=<value optimized out>, cwd=<value optimized out>, envc=1, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x1fa17c4 "hansmbakker-laptop;1272197967;118228;1710_TIME2613234") at ../../kinit/kinit.cpp:717
#32 0x0000000000407cb0 in handle_launcher_request (sock=8, who=<value optimized out>) at ../../kinit/kinit.cpp:1209
#33 0x000000000040823a in handle_requests (waitForPid=0) at ../../kinit/kinit.cpp:1402
#34 0x0000000000408e22 in main (argc=4, argv=<value optimized out>, envp=<value optimized out>) at ../../kinit/kinit.cpp:1845

Reported using DrKonqi
Comment 1 Thomas Zander 2010-04-25 19:04:14 UTC
Inge, you said you could reproduce this. Can you please debug it?
Comment 2 Thomas Zander 2010-04-29 10:49:46 UTC
*** Bug 235476 has been marked as a duplicate of this bug. ***
Comment 3 Paul Jenkins 2010-04-30 04:56:51 UTC
Created attachment 43111 [details]
New crash information added by DrKonqi

As I exit KWord it crashes, saying that KWord closed unexpectedly with the options to restart the application or report bug this has happened on each occasion since the upgrade.
Comment 4 Thomas Zander 2010-05-01 20:29:28 UTC
*** Bug 235943 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Zander 2010-05-02 21:27:12 UTC
Using self-compiled Qt462 and Qt47(git) as well as kubuntu-shipped Qt452 I can't reproduce this. All against KDE4.4-branch.
Comment 6 Thomas Zander 2010-05-08 16:48:53 UTC
*** Bug 236857 has been marked as a duplicate of this bug. ***
Comment 7 Thomas Zander 2010-05-09 20:56:13 UTC
*** Bug 236108 has been marked as a duplicate of this bug. ***
Comment 8 Thomas Zander 2010-05-09 21:45:22 UTC
*** Bug 235514 has been marked as a duplicate of this bug. ***
Comment 9 Thomas Zander 2010-05-12 08:53:06 UTC
SVN commit 1125746 by zander:

Don't crash

I can't reproduce the crash myself but this is shown to fix it.
Only committing on branch so we can get the release out, we should
get a proper fix for trunk.

CCBUG:235345
Reviewed-by: Inge

 M  +1 -1      KoToolBase_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125746
Comment 10 Halla Rempt 2010-05-12 16:30:33 UTC
SVN commit 1125860 by rempt:

Fix crash on closing a second window

Sometimes, when closing a window, the tool option widget is still
owned by the window, instead of the tool. Then the tool will first
delete the widget, followed by the window, which causes a crash.

So, only delete tool option widgets that do not have a parent.

BUG:235345

 M  +9 -1      KoToolBase_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125860
Comment 11 Kevin Kofler 2010-05-12 16:38:18 UTC
Can you please also apply this to the 2.2 branch instead of the quick hack which leaks memory?
Comment 12 Thomas Zander 2010-05-14 13:27:03 UTC
As discussed on the ML, this fix was not correct.
Comment 13 Lionel POIBLANC 2010-05-14 15:32:23 UTC
Created attachment 43584 [details]
New crash information added by DrKonqi

Same issue here, Archlinux 64bits, all packages up to date the 14th May (testing repo not used).
KWord crashes at shutdown of the application. I just launched KWord, choose a blank page as a template then close it without any other actions: it crashes each time.
Problem only with KWord, it's OK for the other applications of the KOffice suite.
Comment 14 Halla Rempt 2010-05-14 17:52:15 UTC
Lionel, which version of Qt are you using? I'm rather suspecting it to be a Qt problem at, with 4.6.2 showing the problem and 4.6.3 not.
Comment 15 Lionel POIBLANC 2010-05-14 21:03:44 UTC
I am using Qt 4.6.2

Le vendredi 14 mai 2010 17:52:19, boud@valdyas.org a écrit :
> https://bugs.kde.org/show_bug.cgi?id=235345
> 
> 
> boud@valdyas.org changed:
> 
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
> - CC|                            |boud@valdyas.org
> 
> 
> 
> 
> --- Comment #14 from  <boud valdyas org>  2010-05-14 17:52:15 ---
> Lionel, which version of Qt are you using? I'm rather suspecting it to be a
> Qt problem at, with 4.6.2 showing the problem and 4.6.3 not.
Comment 16 Halla Rempt 2010-05-14 21:13:54 UTC
Any chance of upgrading to 4.6.3 or 4.7 and testing again? Don't bother if it's a really big thing for you, though.
Comment 17 Thomas Zander 2010-05-15 13:56:45 UTC
*** Bug 237706 has been marked as a duplicate of this bug. ***
Comment 18 Thomas Zander 2010-05-15 14:02:07 UTC
*** Bug 237035 has been marked as a duplicate of this bug. ***
Comment 19 Halla Rempt 2010-05-15 15:02:12 UTC
SVN commit 1127068 by rempt:

Fix crash of KWord on exit

The crash is caused by a bug in Qt 4.6.2 that is solved in Qt 4.6.3.
If running with Qt < 4.6.3, explicitly set the parent of the option
widgets to 0 before deleting them. This is not necessary with Qt 4.6.3
and presumably Qt 4.7. Tested with 4.6.2, 4.6.3 from OpenSUSE.

BUG:235345

 M  +5 -4      KoToolBase_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1127068
Comment 20 Thomas Zander 2010-05-15 15:26:04 UTC
To avoid people getting confused about Qt versions; there is no Qt463 released yet, so if readers following this bug go looking for packages they are forewarned that Qt4.6.3 is not released and any packages claiming to be that likely have other regressions.
Comment 21 Thomas Zander 2010-05-23 15:15:48 UTC
*** Bug 238565 has been marked as a duplicate of this bug. ***
Comment 22 Thomas Zander 2010-06-01 17:12:22 UTC
*** Bug 240357 has been marked as a duplicate of this bug. ***