Fix crash on closing a second window

Sometimes, when closing a window, the tool option widget is still
owned by the window, instead of the tool. Then the tool will first
delete the widget, followed by the window, which causes a crash.

So, only delete tool option widgets that do not have a parent.

BUG:235345

svn path=/trunk/koffice/; revision=1125860